# percolation

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
Percolation/src/: Percolation.jl
include/: config.h  convolution.h  gensa.hpp  lattice.h  perc_v2.h  percolation.h
include/detail/: geometric_cluster.hpp  geometric_cluster.ipp  lattice.hpp  magnetic_cluster.hpp  magnetic_cluster.ipp  memory.hpp  neighbour_stats.hpp  particle.hpp  particle.ipp  random.hpp  shuffle.hpp  simulated_annealing.hpp  system_state.hpp  system_state.ipp  thermalisation.hpp  utility.hpp
percolation/: __init__.py  percolation.py
src/: convolution.cpp  lattice.c  main.cpp  perc_v2.cpp  percolation.cpp  random.cpp
test/: CMakeLists.txt  neighbour_stats.cpp
test/headers/: CMakeLists.txt  config.cpp  convolution.cpp  geometric_cluster.cpp  lattice.cpp  magnetic_cluster.cpp  neighbour_stats.cpp  particle.cpp  shuffle.cpp
